Eskeletoa botoiekin (funtzionatzen dabe) BBa lotu behar da